<resources>
    <string name="app_name">Task_4</string>
    <string name="minsk_name">Minsk</string>
    <string name="Zhodino_name">Zhodino</string>
    <string name="get_minsk_info">Minsk Info</string>
    <string name="get_zhodino_info">Zhodino Info</string>
    <string name="Info">Info</string>
    <string name="enter_city">Write town here</string>
    <string name="get_info_button">Get Info</string>

</resources>